--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.4.16",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.4.15",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "^2.1.0",
@@ -37,6 +38,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "http-status-codes": "^2.2.0",
+    "pg": "^8.16.0",
     "reflect-metadata": "^0.2.1",
     "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
