--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   app:
     container_name: app
@@ -20,10 +19,9 @@ services:
     restart: always
     image: postgres:16-alpine
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: test12345
-      POSTGRES_DB: nodejs2025q2_service
-
+      POSTGRES_USER: ${DATABASE_USERNAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${DATABASE_NAME}
 
     ports:
       - ${PORT_POSTGRES}:${PORT_POSTGRES}
@@ -34,8 +32,6 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - app-network
-
-
 
 networks:
   app-network:
